--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-  ~ /*
-   ~  *  Copyright 2014 Orient Technologies LTD (info(at)orientechnologies.com)
-   ~  *
-   ~  *  Licensed under the Apache License, Version 2.0 (the "License");
-   ~  *  you may not use this file except in compliance with the License.
-   ~  *  You may obtain a copy of the License at
-   ~  *
-   ~  *       http://www.apache.org/licenses/LICENSE-2.0
-   ~  *
-   ~  *  Unless required by applicable law or agreed to in writing, software
-   ~  *  distributed under the License is distributed on an "AS IS" BASIS,
-   ~  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   ~  *  See the License for the specific language governing permissions and
-   ~  *  limitations under the License.
-   ~  *
-   ~  * For more information: http://www.orientechnologies.com
-   ~  */
-   -->
+<!-- ~ /* ~ * Copyright 2014 Orient Technologies LTD (info(at)orientechnologies.com) 
+    ~ * ~ * Licensed under the Apache License, Version 2.0 (the "License"); ~ 
+    * you may not use this file except in compliance with the License. ~ * You 
+    may obtain a copy of the License at ~ * ~ * http://www.apache.org/licenses/LICENSE-2.0 
+    ~ * ~ * Unless required by applicable law or agreed to in writing, software 
+    ~ * distributed under the License is distributed on an "AS IS" BASIS, ~ * 
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
+    ~ * See the License for the specific language governing permissions and ~ 
+    * limitations under the License. ~ * ~ * For more information: http://www.orientechnologies.com 
+    ~ */ -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -133,9 +124,15 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
-                    <argLine>-ea -Xmx2048m -Dindex.flushAfterCreate=false -Dstorage.makeFullCheckpointAfterCreate=false -Dstorage.makeFullCheckpointAfterOpen=false
-                        -Dstorage.makeFullCheckpointAfterClusterCreate=false -Dstorage.wal.syncOnPageFlush=false
-                        -Dstorage.configuration.syncOnUpdate=false -Ddb.makeFullCheckpointOnIndexChange=false -Ddb.makeFullCheckpointOnSchemaChange=false
+                    <argLine>-ea -Xmx2048m
+                        -Dindex.flushAfterCreate=false
+                        -Dstorage.makeFullCheckpointAfterCreate=false
+                        -Dstorage.makeFullCheckpointAfterOpen=false
+                        -Dstorage.makeFullCheckpointAfterClusterCreate=false
+                        -Dstorage.wal.syncOnPageFlush=false
+                        -Dstorage.configuration.syncOnUpdate=false
+                        -Ddb.makeFullCheckpointOnIndexChange=false
+                        -Ddb.makeFullCheckpointOnSchemaChange=false ${argLine}
                     </argLine>
                     <systemPropertyVariables>
                         <buildDirectory>${project.build.directory}</buildDirectory>
